<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="T_NOTT_IR_CAMERA_DL_SYNC" Id="{3988b824-1c9b-4936-9b87-c9a30fe104cf}">
    <Declaration><![CDATA[TYPE T_NOTT_IR_CAMERA_DL_SYNC :
STRUCT
	TimeStamp:		ULINT;
	lrActPos_DL1:	LREAL;
	lrActPos_DL2:	LREAL;
	lrActPos_DL3:	LREAL;
	lrActPos_DL4:	LREAL;	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>